--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_fonts: ^4.0.5
+  http: ^1.0.0
+  provider: ^6.0.5
+  shared_preferences: ^2.1.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
