--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Build
         uses: subosito/flutter-action@v1
         with:
-          channel: 'dev'
+          channel: 'stable'
+          flutter-version: '3.10.2'
       - run: flutter config --enable-web
       - run: flutter pub get
       - run: flutter build web --release
